# equibase-jobs-api

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  dump.rdb  extract_races.py  pyproject.toml  render.yaml  requirements.txt  test_comparison.py  test_extract_races.py
app/: config.py  main.py  routes.py
app/database/: __init__.py  client.py  jobs.py  storage.py
app/handlers/: health.py  jobs.py
app/models/: __init__.py  job.py
app/workers/: __init__.py  extract_pdf.py  pdf_processor.py
outputs/: 01-01-23.csv
scripts/: extract_pdf.py  test_comparison.py  test_extract_races.py
scripts/outputs/: 01-01-23.csv  correct-01-01-23.csv  test.csv
